--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,24 +1,20 @@
 name: .NET
-
 on:
   push:
     branches: [ main ]
   pull_request:
     branches: [ main ]
-
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
-    - name: Setup .NET
+    - name: Build and deploy the Docker image
       uses: actions/setup-dotnet@v1
     - name: Restore dependencies
-      env:
-        HEROKU_API_KEY:${{secrets.HEROKU_API_KEY}}
-        APP_NAME:${{secrets.APP_NAME}}
+      env: 
+        HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+        APP_NAME: ${{ secrets.APP_NAME }}
       run: |
         cd ..
         docker login --username=_ --password=$HEROKU_API_KEY registry.heroku.com
