--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -17,6 +17,6 @@ jobs:
         APP_NAME: ${{ secrets.APP_NAME }}
       run: |
         cd ..
-        docker login --username=_ --password=$HEROKU_API_KEY registry.heroku.com
+        docker login -u username --password-stdin
         heroku container:push web -a $APP_NAME
         heroku container:release web -a $APP_NAME
